fixed spacing on homepage footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -313,14 +313,14 @@ table {
 	.grid-container {
 	display: block;
 	width: 100%;
+
 }
 
 .grid-item {
 	width: 100%;
 	height: auto;
 	display: block;
-	background-size: contain;
-	padding: -10px;
+	margin-bottom: -20px;
 }
 
 .content-container {
@@ -479,7 +479,7 @@ table {
 		text-align: left;
 		width: 100%;
 		height: 100%;
-		padding-bottom: 100px;
+		padding-bottom: 190px;
 		background-color: var(fpo--bg2-color);
 	}
 
@@ -591,15 +591,15 @@ table {
 	display: block;
 	position: sticky;
 	background: #ff5252;
-	height: 225px;
-	padding-top: 20px;
+	height: 200px;
+	padding-top: 25px;
 	padding-bottom: 20px;
 
 }
 
 .footer-text{
 	color: #fff;
-	padding-top: 20px;
+	padding-top: 30px;
 	padding-bottom: 20px;
 	text-align: center;
 	font-size: 18px;
